--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,9 +89,8 @@ header {
 .featured-list-container {
     display: flex;
     align-items: center;
-    text-align: left;
     gap: 60px;
-    padding: 40px 100px;
+    padding: 40px 80px;
 }
 
 .list-image-container {
@@ -105,3 +104,26 @@ header {
     width: 342px;
     height: 342px;
 }
+
+.list-info {
+    text-align: left;
+}
+
+.list-title {
+    font-weight: 500;
+    font-size: 35px;
+}
+.quick-color{
+    color: #727272;
+}
+.featured-color{
+color: #FF900E;
+}
+
+.list-discription {
+    font-weight: 200;
+    font-size: 12px;
+    color: #727272;
+    margin: 30px 0;
+}
+/* ---------featured list styles end -------- */
