--- a/styles/styles.css
+++ b/styles/styles.css
@@ -268,7 +268,7 @@ header {
 
 .sponspors-logo {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     column-gap: 50px;
     padding: 10px 90px;
 }
@@ -277,6 +277,7 @@ header {
     width: 100%;
     max-width: 106px;
     height: 30px;
+    filter: grayscale(100%);
 }
 
 /* ----sponspors styles end--------- */
